tests/fixtures/type_errors/builtin_base64_type.airl
;; ERROR: type mismatch
;; base64-encode expects String, not Int
(base64-encode 42)
